# jormungandr

./: .env.example  .gitignore  404.html  README.md  boxes1.pt  calculate_gflops.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  train.py  validate.py
.github/workflows/: cd.yml  ci.yml
architectural_design/: index.html
developer_setup/: index.html
docs/: developer_setup.md
notebooks/: coco_dataloader.ipynb  kitti.ipynb  metrics.ipynb  mot.ipynb  playground.ipynb  visualize_labels.ipynb
reference/src/jormungandr/: index.html
reference/src/jormungandr/a/: index.html
reference/src/jormungandr/b/: index.html
scripts/: download.bash  download.slurm  download_dataset.py  experiment_1.slurm  experiment_2.slurm  experiment_2_dc5.slurm  experiment_2_detr.slurm  experiment_2_hidden_dim_128.slurm  experiment_2_hidden_dim_16.slurm  experiment_2_hidden_dim_32.slurm  experiment_2_hidden_dim_64.slurm  experiment_3.slurm  experiment_3_3.slurm  experiment_5.slurm  fast_train.slurm  plot_loss_landscape.py  plot_loss_landscape.slurm  train.slurm  upload_artifact.py  validate.slurm  validate_dataset.py
search/: search_index.json
src/jormungandr/: __init__.py  backbone.py  configuration.py  dataset.py  detr_decoder.py  embedder.py  encoder.py  fafnir.py  jormungandr.py  mamba_encoder.py  output_head.py  trainer.py
src/jormungandr/config/: config.yaml  configuration.py  detr.yaml  detr_encoder.yaml  detr_pretrained.yaml  experiment_1.yaml  experiment_2.yaml  experiment_2_24_layers.yaml  experiment_2_3_layers.yaml  experiment_2_6_layers.yaml  experiment_2_dc5.yaml  experiment_2_dc5_cosine.yaml  experiment_2_detr.yaml  experiment_2_ffn.yaml  experiment_2_ffn_265_hidden_size.yaml  experiment_2_hidden_dim_128.yaml  experiment_2_hidden_dim_16.yaml  experiment_2_hidden_dim_32.yaml  experiment_2_hidden_dim_64.yaml  experiment_2_mamba1.yaml  experiment_3.yaml  experiment_3_0.yaml  experiment_3_1.yaml  experiment_3_2.yaml  experiment_3_3.yaml  experiment_5_4.yaml  experiment_5_64.yaml  experiment_5_8.yaml  experiment_5_detr.yaml  test_config.yaml
src/jormungandr/datasets/: __init__.py  loader.py  processor.py
src/jormungandr/training/: coco_eval.py  criterion.py  optimizer.py  scheduler.py  trainer.py
src/jormungandr/utils/: compacting.py  debug_utils.py  image_processor.py  model_fetcher.py  seed.py  transforms.py
tests/: test_backbone.py  test_criterion.py  test_dataloader.py  test_debug_utils.py  test_detr_encoder.py  test_example.py  test_fafnir.py  test_mamba_encoder.py  test_output_head.py  test_training.py
(+29 files in other folders)
